# donebench

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
annotation/: adjudication_template.md  annotation_guide.md  annotation_queue.jsonl  dataset_task_construction_datasheet.md  human_audit_queue.jsonl
configs/: domains.yaml  experiments.yaml  models.yaml
data/: task_stats.json
data/schemas/: spec.schema.json  (+1 more)
donebench/: __init__.py  cli.py
paper/: main.tex  references.bib
reports/: ablation_status.md  agent_handoff.md  artifact_policy.md  audit_gpt55_targeted_queue.jsonl  audit_gpt55_targeted_tasks.md  blockers.md  claim_to_artifact_map.md  decisions.md  full_domain_model_assisted_audit_findings.md  full_run_readiness.json  leaderboard_contamination_policy.md  method_extension_plan.md  model_access_cost_latency_retry.md  next_actions.md  next_experiment_protocol.md  openreview_checklist.md  openreview_package_manifest.md  paper_submission_readiness.md  pilot_findings.md  project_log.md  readiness_report.json  related_work_gap_analysis.md  release_manifest.json  release_manifest.md  repro_manifest.json  repro_manifest_topconf4.json  reproducibility_package.md  reviewer2.md  task_audit.json  task_repair_summary.md  topconf_experiment_plan.md
tests/: test_analysis_modules.py  test_artifact_modules.py  test_cli_smoke.py  test_dsl.py  test_envs.py  test_gold_graders.py  test_metrics.py  test_mutations.py  test_run_matrix.py  test_schema.py
(+1255 files in other folders)
